// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepItem > renders a simple item when isSimple is true 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR kAMLGE sc-jwTyAe hTtDPN"
    />
  </div>
</body>
`;

exports[`StepItem > renders the completed icon when step is completed 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR ioVWEY sc-hjsuWn blvpKV"
    >
      <div
        class="sc-bRKDuR leNTXj sc-jJLAfE ejaShY"
        data-testid="step-item-Step 1"
      >
        <div
          class="sc-bRKDuR fwCHSf sc-hwkwBN ehCFIa"
        >
          <span
            class="sc-bRKDuR bHjpxP sc-fhHczv kxywTO"
            data-testid="tick-container"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.641 5.232a1.001 1.001 0 00-1.409.128L9.807 16.67l-5.252-3.501a1 1 0 10-1.11 1.664l6 4a1.006 1.006 0 001.324-.193l10-12a1.001 1.001 0 00-.128-1.408z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ qDeEm sc-kNOymR eiBTXe"
          cursor="inherit"
          title=""
        >
          Step 1
        </p>
      </div>
      <div
        class="sc-bRKDuR bHjpxP sc-dYwGCk kDpsHe"
      />
    </div>
  </div>
</body>
`;

exports[`StepItem > renders the label correctly and does not render tick if notCompleted 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR ioVWEY sc-hjsuWn blvpKV"
    >
      <div
        class="sc-bRKDuR leNTXj sc-jJLAfE ejaShY"
        data-testid="step-item-Step 1"
      >
        <div
          class="sc-bRKDuR fwCHSf sc-hwkwBN eWQDzm"
        />
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ qDeEm sc-kNOymR eiBTXe"
          cursor="inherit"
          title=""
        >
          Step 1
        </p>
      </div>
    </div>
  </div>
</body>
`;
